Rewrite README as a guide to every exercise
What the repository contains, requirements, running in IntelliJ
(including the org.json library path) and from the command line
(tested commands, Windows variant), a catalogue of every exercise
with sample input and expected output, the RSA example, and notes on
IntToString (Security Manager on JDK 18+), HTTPRequest and
DateAndTime. Ignore the downloaded lib/ jars.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SrZrGpo8TpmkgMf8fATm6x